--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "webpack": "webpack",
     "start": "webpack serve",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,9 +36,12 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5",
     "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "typescript-plugin-styled-components": "^2.0.0"
   }
 }
