--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "webpack": "webpack",
     "start": "webpack serve",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,11 +25,13 @@
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.2",
     "path": "^0.12.7",
     "ts-loader": "^9.3.1",
     "webpack": "^5.73.0",
